All numbers and literals are now defined as constants.